<resources>
    <string name="app_name">FourPaws</string>
    <!-- fragments labels in navigation -->
    <string name="title_home">Питомцы</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_interesting_facts">Интересное</string>

    <!-- button name    -->
    <string name="choose_area_title">Выбрать</string>

    <!-- strings for layout   -->
    <string name="region">Регион</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Если вы отклоните разрешение, мы не сможем определить Ваше местоположение.\n\n Пожалуйста  перейдите в [Настройки] > [Разрешения]</string>
    <string name="permission_denied_title">Разрешения были отклонены</string>
    <string name="permission_title">Требуются разрешения</string>
    <string name="permission_gps_text">Необходимо разрешение на определение вашего местоположения</string>
    <string name="permission_error_text">Не удалось определить Ваше местоположение. Пожалйста выберите регион из списка</string>
    <string name="settings">Настройки</string>
    <string name="shelters">Приюты</string>
    <string name="filter">Фильтр</string>
    <string name="home_nav_graph_label">DefinitionHomeFlow</string>
    <string name="network_error">Нет подключения к интернету</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="error">Ошибка</string>
    <string name="location_error_text">Не удалось сохранить выбранный регион, попробуйте еще раз</string>
    <string name="location_description">Выберите регион для поиска \nВашего питомца</string>
    <string name="uri_market">market://details?id=com.google.android.apps.maps</string>
    <string name="uri_market_email">market://details?id=com.google.android.gm</string>
    <string name="uri_geo">geo:0,0?q=%1$f,%2$f</string>
    <string name="package_maps">com.google.android.apps.maps</string>
    <string name="no_shelters_in_region">В вашем регионе нет приютов</string>
    <string name="no_internet_message">Нет соединения с интернетом</string>
    <string name="back_arrow_title">Назад</string>
    <string name="cant_find_pet_error">Нет подключения к интернету</string>
    <string name="back">Вернуться</string>
    <string name="tel_uri">tel:%1$s</string>
    <string name="send_uri">smsto:%1$s</string>
    <string name="shared_by">Поделиться через:</string>
    <string name="send_by">Отправить сообщение в приют:</string>
    <string name="mail_uri">mailto:</string>
    <string name="call_by">Позвонить через:</string>
    <string name="text_type">text/plain</string>
    <string name="default_message">Здравствуйте! Меня заинтересовал Ваш питомец %1$s. Я бы хотел его забрать</string>
    <string name="default_message_title">Забрать питомца</string>
    <string name="share_default_text">Смотри какой хороший!</string>
    <string name="pets_not_found">В выбранном регионе питомцы не найдены. Попробейте поискать в другом регионе</string>
    <string name="pets_not_filter">Питомцы не найдены</string>
    <string name="pet_not_found">Питомец не найден</string>
    <string name="is_empty_yet">Пока что здесь пусто</string>
    <string name="is_empty_message">Но вы можете добавить питомцев в избранное</string>
    <string name="adult">Взрослая</string>
    <string name="baby">Малыш</string>
    <string name="elderly">Пожилой</string>
    <string name="young">Молодой</string>
    <string name="unknown_age">Неизвестно</string>
    <string name="baby_eng">baby</string>
    <string name="young_eng">young</string>
    <string name="adult_eng">adult</string>
    <string name="elderly_eng">elderly</string>
    <string name="sterilized">sterilized</string>
    <string name="vaccinated">vaccinated</string>
    <string name="friendly">friendly</string>
    <string name="accustomed_tray">accustomedTray</string>
    <string name="ru_sterilised">Стерилизован</string>
    <string name="ru_vaccinated">Привит</string>
    <string name="ru_friendly">Дружелюбен</string>
    <string name="ru_accustomed_tray">Приучен к лотку</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="ru_male">мальчик</string>
    <string name="ru_female">девочка</string>
    <string name="label_shelter_address">shelter address</string>
    <string name="open_map_item_menu">Открыть карту</string>
    <string name="copy_item_menu">Скопировать адрес</string>
    <string name="copied">Скопировано</string>
    <string name="error_loading_areas">Не удалось загрузить список областей. Проверьте подключение к интеренту</string>
    <string name="message_setup_email">Установите почтовый клиент</string>
    <string name="share_choose_title">с кем поделиться</string>
    <string name="not_possible_share">Не возможно поделиться</string>
    <string name="url_pet_detail">https://epic.fourpaws.ru/petdetail/%1$d</string>
    <string name="boy">Мальчик</string>
    <string name="girl">Девочка</string>
    <string name="get_my_location">Определить моё местоположение</string>
    <string name="or">Или</string>

    <string name="cats">Кошки</string>
    <string name="dogs">Собаки</string>
    <string name="boys">Мальчики</string>
    <string name="girls">Девочки</string>
    <string name="other_params">Прочее</string>
    <string name="apply">Применить</string>
    <string name="area">Регион</string>
    <string name="pet_title">Питомец</string>
    <string name="male_title">Пол</string>
    <string name="age_title">Возраст</string>
    <string name="cat">CAT</string>
    <string name="dog">DOG</string>
    <string name="error_reading_data">ошибка чтения данных</string>
    <string name="error_data_filling">ошибка данных фильтра</string>
    <string name="gps">GPS</string>
    <string name="inable_gps">Включить геолокацию</string>
    <string name="empty_list">Список питомцев пуст</string>

</resources>