<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="epic.legofullstack.fourpaws.feature_home_page.presentation.FragmentHomePage"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_page"/>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="epic.legofullstack.fourpaws.feature_favorites.presentation.FragmentFavorites"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorites"/>

    <fragment
        android:id="@+id/navigation_facts"
        android:name="epic.legofullstack.fourpaws.feature_interesting_facts.FragmentInterestingFacts"
        android:label="@string/title_interesting_facts"
        tools:layout="@layout/fragment_interesting_facts"/>
</navigation>