<?xml version="1.0" encoding="utf-8" ?>
<androidx.core.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="60dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchAreaLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/area"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:boxCornerRadiusBottomEnd="@dimen/margin_8"
                app:boxCornerRadiusBottomStart="@dimen/margin_8"
                app:boxCornerRadiusTopEnd="@dimen/margin_8"
                app:boxCornerRadiusTopStart="@dimen/margin_8">

                <AutoCompleteTextView
                    android:id="@+id/searchAreaField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:completionThreshold="2"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:paddingStart="16dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/petTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_title"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/searchAreaLayout"
                app:layout_constraintStart_toStartOf="@+id/searchAreaLayout"
                app:layout_constraintTop_toBottomOf="@id/searchAreaLayout" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/petTypeToggles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/petTitle"
                android:weightSum="2"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/catToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FilterToggleButton"
                    app:icon="@drawable/ic_cat"
                    android:text="@string/cats"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dogToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FilterToggleButton"
                    app:icon="@drawable/ic_dog"
                    android:text="@string/dogs"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/maleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_title"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/petTypeToggles"
                app:layout_constraintStart_toStartOf="@+id/petTypeToggles"
                app:layout_constraintTop_toBottomOf="@+id/petTypeToggles" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/maleToggles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/maleTitle"
                android:layout_marginTop="16dp"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/maleToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FilterToggleButton"
                    app:icon="@drawable/img_male"
                    app:iconSize="40dp"
                    app:iconTint="@color/king_blue"
                    android:text="@string/boys"
                    android:textColor="@color/black"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/femaleToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FilterToggleButton"
                    app:icon="@drawable/ic_female"
                    app:iconSize="40dp"
                    app:iconTint="@color/deep_pink"
                    android:text="@string/girls"
                    android:textColor="@color/black"
                    android:layout_weight="1" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/ageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_title"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/maleToggles"
                app:layout_constraintStart_toStartOf="@+id/maleToggles"
                app:layout_constraintTop_toBottomOf="@+id/maleToggles" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/ageChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ageTitle"
                app:singleSelection="true"
                android:padding="@dimen/margin_8">

                <com.google.android.material.chip.Chip
                    android:id="@+id/babyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baby"
                    android:checkable="true"
                    app:checkedIcon="@drawable/ic_done" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/youngChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/young"
                    android:checkable="true"
                    app:checkedIcon="@drawable/ic_done"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/adultChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adult"
                    android:checkable="true"
                    app:checkedIcon="@drawable/ic_done"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/elderlyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elderly"
                    android:checkable="true"
                    app:checkedIcon="@drawable/ic_done"/>

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/othersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_params"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/ageChipGroup"
                app:layout_constraintStart_toStartOf="@+id/ageChipGroup"
                app:layout_constraintTop_toBottomOf="@+id/ageChipGroup" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/othersChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/othersTitle"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/sterilizedChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/ru_sterilised"
                    app:checkedIcon="@drawable/ic_done" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/accustomedTrayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/ru_accustomed_tray"
                    app:checkedIcon="@drawable/ic_done" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vaccinatedChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/ru_vaccinated"
                    app:checkedIcon="@drawable/ic_done" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/friendlyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/ru_friendly"
                    app:checkedIcon="@drawable/ic_done" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/applyButton"
                style="@style/BigBottomButton"
                android:text="@string/apply"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                app:layout_constraintTop_toBottomOf="@id/othersChipGroup"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/filterProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>



</androidx.core.widget.NestedScrollView>